# NTPWEdit-version-0.7-GPL

./: BUILD.txt  CMakeLists.txt  Makefile  README.md  configure-mingw.cmd  configure-mingw.sh  configure-mingw64.sh  configure-msvc.cmd  dlgabout.c  dlgabout.h  dlghiber.c  dlghiber.h  dlgpass.c  dlgpass.h  main.c  message.c  message.h  resource.rc  resource64.rc  version.c  version.h
